# ticket-vendor

./: .gitignore  AI_DEVELOPMENT_GUIDE.md  Dockerfile  README.md  VENDOR_CHECKLIST.md  plugin-manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
k8s/: configmap-plugin-registry-ticket.yaml
plugins/ibon/: plugin.py
plugins/kktix/: plugin.py
plugins/kktix/fixtures/: events.json
plugins/kktix/mock/: server.py
plugins/kktix/tests/: test_contract.py
plugins/ticketmaster/: plugin.py
plugins/vendor_ticketmaster/: __init__.py  plugin.py
plugins/vendor_ticketmaster/mock/business/: scenarios.py  server.py
plugins/vendor_ticketmaster/tests/: conftest.py  test_business_mock.py  test_contract.py  test_integration.py  test_transform.py
proxy/: main.py
scripts/: generate-manifest.py  validate-vendor.py
specs/: business-api.md
unified-ticket-api/: pyproject.toml
unified-ticket-api/unified_ticket_api/: __init__.py  abc.py
unified-ticket-api/unified_ticket_api/models/: __init__.py  common.py  inventory.py  orders.py  search.py
